--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "vue": "^2.6.8",
+    "vue-add-to-calendar": "^1.0.4",
     "vue-google-oauth2": "^1.3.2",
     "vue-router": "^3.0.1",
     "vuetify": "^1.5.5",
